updates RNs for 1.1.3[#157682193]

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -5,6 +5,20 @@ owner: PCF Event Alerts
 
 These are release notes for PCF Event Alerts.
 
+##<a id="ver-1-1-3"></a> v1.1.3
+
+**Release Date:** May 17, 2018
+
+### <a id="fixed"></a> Fixed Issues
+
+Issues fixed in this release:
+
+* Notifications
+
+### <a id="known"></a> Known Issues
+
+No known issues for this release.
+
 ##<a id="ver"></a> v1.1.2
 
 **Release Date:** April 25, 2018
@@ -17,4 +31,4 @@ Features included in this release:
 
 ### <a id="known"></a> Known Issues
 
-No known issues for this release.
+* Notifications
