Further clarification for 113 RNs[#157682193]

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -9,15 +9,16 @@ These are release notes for PCF Event Alerts.
 
 **Release Date:** May 17, 2018
 
-### <a id="fixed"></a> Fixed Issues
+### <a id="features113"></a> Features
 
-Issues fixed in this release:
+New features and changes in this release:
 
-* Notifications
+* PCF Event Alerts now uses its own client instead of other clients.
+  This change has no user impact.
 
-### <a id="known"></a> Known Issues
+### <a id="known113"></a> Known Issues
 
-No known issues for this release.
+There are no known issues for this release.
 
 ##<a id="ver"></a> v1.1.2
 
@@ -31,4 +32,4 @@ Features included in this release:
 
 ### <a id="known"></a> Known Issues
 
-* Notifications
+There are no known issues for this release.
