updates release notes and snapshot[#158095298]

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -9,11 +9,11 @@ These are release notes for PCF Event Alerts.
 
 **Release Date:** June 5, 2018
 
-### <a id="features113"></a> Features
+### <a id="fixes113"></a> Fixed Issues
 
-New features and changes in this release:
+This release fixes the following issue:
 
-* Added configuration for insecure skip verify to notifications client. This fixes an issue that some users were unable to install Event Alerts when notifications requires https. 
+* Installation no longer fails when the Notifications client requires HTTPS.
 
 ### <a id="known113"></a> Known Issues
 
@@ -32,7 +32,8 @@ New features and changes in this release:
 
 ### <a id="known113"></a> Known Issues
 
-Some users were unable to install Event Alerts when notifications requires https. This is resolved in 1.1.4.
+Some users are unable to install PCF Event Alerts when the Notifications client required HTTPS.
+This issue is fixed in v1.1.4.
 
 ##<a id="ver"></a> v1.1.2
 
