--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -32,7 +32,7 @@ New features and changes in this release:
 
 ### <a id="known113"></a> Known Issues
 
-Some users were unable to install PCF Event Alerts when the Notifications client required HTTPS.
+Some users are unable to install PCF Event Alerts when the Notifications client requires HTTPS.
 This issue is fixed in v1.1.4.
 
 ##<a id="ver"></a> v1.1.2
