--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -5,7 +5,11 @@ owner: PCF Event Alerts
 
 These are release notes for PCF Event Alerts.
 
-##<a id="ver-1-1-3"></a> v1.1.4
+##<a id="ver-1.2"></a> v1.2
+
+**Release Date:** June X, 2018
+
+##<a id="ver-1-1-4"></a> v1.1.4
 
 **Release Date:** June 5, 2018
 
