Revert "removed Beta note"
This reverts commit ed1252ba57ee2ec0a1124f54f8b22f40c5820875.

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -1,7 +1,9 @@
 ---
-title: PCF Event Alerts 
+title: PCF Event Alerts (Beta)
 owner: PCF Event Alerts
 ---
+
+<p class="note warning"><strong>WARNING</strong>: The Pivotal Cloud Foundry (PCF) Event Alerts tile is currently in beta and is intended for evaluation and test purposes only. Do not use this product in a PCF production environment.</p>
 
 This documentation describes PCF Event Alerts.
 
