--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -5,16 +5,9 @@ owner: PCF Event Alerts
 
 These are release notes for PCF Event Alerts.
 
-<<<<<<< HEAD
-<<<<<<< HEAD
-##<a id="ver-1.2"></a> v1.2
-=======
-##<a id="ver-1-1-3"></a> v1.1.5
-=======
 ##<a id="ver-1-1-5"></a> v1.1.5
->>>>>>> parent of b09e8af... Revert "Updated version numbers in ids"
 
-**Release Date:** June 21, 2018
+**Release Date:** June 28, 2018
 
 ### <a id="fixes115"></a> Fixed Issues
 
@@ -26,14 +19,6 @@ This release fixes the following issue:
 
 There are no known issues for this release.
 
-<<<<<<< HEAD
-##<a id="ver-1-1-3"></a> v1.1.4
->>>>>>> parent of 40c6187... Revert "1.1.5 RNs"
-
-**Release Date:** June X, 2018
- 
-### Features
-=======
 ##<a id="ver-1-1-4"></a> v1.1.4
 
 **Release Date:** June 5, 2018
@@ -53,23 +38,27 @@ There are no known issues for this release.
 **Release Date:** May 17, 2018
 
 ### <a id="features113"></a> Features
->>>>>>> parent of b09e8af... Revert "Updated version numbers in ids"
 
 New features and changes in this release:
 
-* In order to view Healthwatch topics, you must have Healthwatch v1.3 installed. (Need link to Healthwatch 1.3 docs)
+* PCF Event Alerts now uses its own client instead of other clients.
+  This change has no user impact.
 
-* This release removes dependence on notifications.
+### <a id="known113"></a> Known Issues
 
-* This release makes email configuration optional during installation.
-  <p class="note"><strong>Note</strong>: Email notification is still required if you want notifications sent by email.</p> 
+Some users are unable to install PCF Event Alerts when the Notifications client requires HTTPS.
+This issue is fixed in v1.1.4.
 
-* All email addresses now receive messages confirming that they have been validated. Previously, if the email address provided was the same as the one used to create the target, the address would be verified automatically but no message was sent.
+##<a id="ver"></a> v1.1.2
 
-### Security Fixes
+**Release Date:** April 25, 2018
 
+### <a id="features"></a> Features
 
-### Fixed Issues
+Features included in this release:
 
+* Sends Slack and email notifications of events that [PCF Healthwatch](http://docs.pivotal.io/pcf-healthwatch/1-2/index.html) has alerted on.
 
-### Known Issues
+### <a id="known"></a> Known Issues
+
+There are no known issues for this release.
