reviewing changes for 1.2.1

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -27,7 +27,7 @@ Admins can configure event alerts using the Cloud Foundry Command Line Interface
 
 ## <a id='publishers'></a>Supported Publishers
 
-PCF Event Alerts v1.1 supports PCF Healthwatch as a publisher.
+PCF Event Alerts v1.2.1 supports PCF Healthwatch as a publisher.
 For general information about PCF Healthwatch, see [Pivotal Cloud Foundry Healthwatch](https://docs.pivotal.io/pcf-healthwatch/).
 
 ## <a id="snapshot"></a>Product Snapshot
@@ -39,11 +39,11 @@ The following table provides version and version-support information about PCF E
     <th>Details</th>
     <tr>
         <td>Tile version</td>
-        <td>v1.1.4</td>
+        <td>v1.2.1</td>
     </tr>
     <tr>
         <td>Release date</td>
-        <td>June 5, 2018</td>
+        <td>July X, 2018</td>
     </tr>
     <tr>
         <td>Compatible Ops Manager version(s)</td>
@@ -52,6 +52,10 @@ The following table provides version and version-support information about PCF E
     <tr>
         <td>Compatible Pivotal Application Service (PAS) version(s)</td>
         <td>v2.1.x</td>
+    </tr>
+    <tr>
+        <td>Compatible Pivotal Cloud Foundry Healthwatch version(s)</td>
+        <td>v1.3.x</td>
     </tr>
     <tr>
         <td>IaaS support</td>
