--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -10,11 +10,10 @@ see [Using PCF Event Alerts](./using.html).
 
 You must have the following in order to install PCF Event Alerts:
 
-+ PAS v2.1.x deployed with the following:
-  + `Email Notifications` enabled with SMTP server configured.
-  + `Notifications Errand` and `Notifications UI Errand` run.
++ PAS v2.1.x or greater
 + MySQL for PCF v2.0 or later, or external MySQL credentials
 + If you want notifications sent to Slack channels, a Slack account
++ If you want notifications sent to email addresses, **Email Configuration** must be enabled and configured on the Event Alerts tile.
 
 ##<a id='install'></a> Download and Install the PCF Event Alerts Tile
 
@@ -79,7 +78,7 @@ may scale down to one instance.
 
 1. Click **Save**. 
 
-###<a id="mysql"></a> Configure MySQL Settings
+### <a id="mysql"></a> Configure MySQL Settings
 
 PCF Event Alerts can either use the MySQL for PCF v2 service or an external MySQL database.
 To use the MySQL for PCF v2 service, you must have MySQL for PCF v2.0 or later installed. 
@@ -143,13 +142,49 @@ If you want to use an external database for PCF Event Alerts, follow the steps b
 
 1. Click **Save**. 
 
-###<a id="stemcell"></a> Verify Stemcell Version
+### <a id="email_settings"></a> Configure Email Notifications
+
+Follow the steps below to configure settings for Event Alerts email notifications.
+
+1. Click the **Email Configuration** tab. 
+
+1. Under **SMTP**, select **Enabled**. 
+  ![Enable Email](images/email-config-details.png)
+
+1. Configure the fields as follows:
+
+    <table class="nice">
+      <tr>
+        <th>Field</th>
+        <th>Description</th>
+      </tr>
+      <tr>
+        <td><strong>From Email</strong></td>
+        <td>The email address you want to use as the sender of email notifications.</td>
+      </tr>
+      <tr>
+        <td><strong>SMTP Server Address</strong></td>
+        <td>The SMTP server address for the outgoing email account.</td>
+      </tr>
+      <tr>
+        <td><strong>SMTP Server Port</strong></td>
+        <td>The SMTP server port for the outgoing email account.</td>
+      </tr>  
+      <tr>
+        <td><strong>SMTP Server Credentials</strong></td>
+        <td>The Username and Password for the outgoing email account.</td>
+      </tr>
+    </table>
+
+1. Click **Save**. 
+
+### <a id="stemcell"></a> Verify Stemcell Version
 
 1. Click the **Stemcell** tab.
 
 1. Verify the settings. If PCF Event Alerts cannot detect a stemcell TGZ file, 
 a message similar to the following appears (the version numbers shown may be different):
-    ![Stemcell Section](images/stemcell.png)
+    ![Stemcell Section](images/stemcell-library.png)
     If you need to upload a stemcell, do the following:
       1. Navigate to [Pivotal Network](https://network.pivotal.io/) and click **Stemcells**.
       1. Download the appropriate stemcell version targeted for your IaaS.
