--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -5,6 +5,30 @@ owner: PCF Event Alerts
 
 These are release notes for PCF Event Alerts.
 
+##<a id="ver-1-2-1"></a> v1.2.1
+
+**Release Date:** July X, 2018
+
+### <a id="features121"></a> Features
+
+New features and changes in this release:
+
+* In order to view Healthwatch topics, you must have [PCF Healthwatch v.1.3] (https://docs-pcf-staging.cfapps.io/pcf-healthwatch/1-3/) Installed.
+* Dependence on notifications has been removed.
+* Email configuration has been added as an option. 
+  <p class="note"><strong>Note</strong>: Specifying Email Configuration settings is required if you want notifications sent by email.</p>
+* All destination email addresses now receive validation messages. Previous to v1.2.1, if the notification email address was the same as the account creating the target, the email address would be verified automatically.
+
+### <a id="fixes115"></a> Fixed Issues
+
+This release fixes the following issue:
+
+* Solves the issue of having an invalid UAA token and failing to install EVA.
+
+### <a id="known115"></a> Known Issues
+
+There are no known issues for this release.
+
 ##<a id="ver-1-1-5"></a> v1.1.5
 
 **Release Date:** June 28, 2018
