--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -10,10 +10,10 @@ see [Using PCF Event Alerts](./using.html).
 
 You must have the following in order to install PCF Event Alerts:
 
-+ PAS v2.1.x or greater
++ PAS v2.1.x or later
 + MySQL for PCF v2.0 or later, or external MySQL credentials
 + If you want notifications sent to Slack channels, a Slack account
-+ If you want notifications sent to email addresses, **Email Configuration** must be enabled and configured on the Event Alerts tile.
++ If you want notifications sent to email addresses, **Email Configuration** must be enabled and configured on the Event Alerts tile
 
 ##<a id='install'></a> Download and Install the PCF Event Alerts Tile
 
