--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -26,9 +26,9 @@ Follow the procedures below to download and install the PCF Event Alerts tile:
 1. Under the **Import a Product** button, click **+** next to the version number of PCF Event Alerts.
 This adds the tile to your staging area.
 
-1. Click the newly added **PCF Event Alerts** tile in orange to open its configuration panes.
+1. Click the newly added **PCF Event Alerts** tile to open its configuration panes.
 
-    ![Configuration Panes](images/config-panes.png)
+    ![Configuration Panes](images/config-panes-2-1.png)
 
 ## <a id="config-tile"></a> Configure the Tile
 
