adding healthwatch compatibility

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -54,6 +54,9 @@ The following table provides version and version-support information about PCF E
         <td>v2.1.x</td>
     </tr>
     <tr>
+        <td>Compatible Pivotal Cloud Foundry Healthwatch version(s)</td>
+        <td>v1.2.x</td>
+    <tr>
         <td>IaaS support</td>
         <td>AWS, Azure, GCP, OpenStack, and vSphere</td>
     </tr>
