tweaks to release notes to match new template[#158038534]

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -3,80 +3,26 @@ title: Release Notes for PCF Event Alerts
 owner: PCF Event Alerts
 ---
 
-These are release notes for PCF Event Alerts.
-
 ##<a id="ver-1-2-1"></a> v1.2.1
 
-**Release Date:** July X, 2018
+**Release Date: July X, 2018**
 
 ### <a id="features121"></a> Features
 
 New features and changes in this release:
 
-* In order to view Healthwatch topics, you must have [PCF Healthwatch v.1.3] (https://docs-pcf-staging.cfapps.io/pcf-healthwatch/1-3/) Installed.
+* To view Healthwatch topics, you must have [PCF Healthwatch v.1.3] (https://docs-pcf-staging.cfapps.io/pcf-healthwatch/1-3/) installed.
 * Dependence on notifications has been removed.
-* Email configuration has been added as an option. 
+* Email configuration is now an option. 
   <p class="note"><strong>Note</strong>: Specifying Email Configuration settings is required if you want notifications sent by email.</p>
-* All destination email addresses now receive validation messages. Previous to v1.2.1, if the notification email address was the same as the account creating the target, the email address would be verified automatically.
+* All destination email addresses now receive validation messages.
+  Before v1.2.1, if the notification email address was the same as the account creating the target, the email address was verified automatically.
 
 ### <a id="known121"></a> Known Issues
 
 There are no known issues for this release.
 
-##<a id="ver-1-1-5"></a> v1.1.5
+## <a id="view"></a> View Release Notes for Another Version
 
-**Release Date:** June 28, 2018
-
-### <a id="fixes115"></a> Fixed Issues
-
-This release fixes the following issue:
-
-* Solves the issue of having an invalid UAA token and failing to install EVA.
-
-### <a id="known115"></a> Known Issues
-
-There are no known issues for this release.
-
-##<a id="ver-1-1-4"></a> v1.1.4
-
-**Release Date:** June 5, 2018
-
-### <a id="fixes114"></a> Fixed Issues
-
-This release fixes the following issue:
-
-* Installation no longer fails when the Notifications client requires HTTPS.
-
-### <a id="known114"></a> Known Issues
-
-There are no known issues for this release.
-
-##<a id="ver-1-1-3"></a> v1.1.3
-
-**Release Date:** May 17, 2018
-
-### <a id="features113"></a> Features
-
-New features and changes in this release:
-
-* PCF Event Alerts now uses its own client instead of other clients.
-  This change has no user impact.
-
-### <a id="known113"></a> Known Issues
-
-Some users are unable to install PCF Event Alerts when the Notifications client requires HTTPS.
-This issue is fixed in v1.1.4.
-
-##<a id="ver"></a> v1.1.2
-
-**Release Date:** April 25, 2018
-
-### <a id="features"></a> Features
-
-Features included in this release:
-
-* Sends Slack and email notifications of events that [PCF Healthwatch](http://docs.pivotal.io/pcf-healthwatch/1-2/index.html) has alerted on.
-
-### <a id="known"></a> Known Issues
-
-There are no known issues for this release.
+To view the release notes for another product version, select the version from 
+the drop-down list at the top of this page.
