adds cross-ref from rel notes to email configs[#158038534]

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -14,7 +14,8 @@ New features and changes in this release:
 * To view Healthwatch topics, you must have [PCF Healthwatch v.1.3] (https://docs-pcf-staging.cfapps.io/pcf-healthwatch/1-3/) installed.
 * Dependence on notifications has been removed.
 * Email configuration is now an option. 
-  <p class="note"><strong>Note</strong>: Specifying Email Configuration settings is required if you want notifications sent by email.</p>
+  <p class="note"><strong>Note</strong>: Specifying email configuration settings is required if you want notifications sent by email.</p>
+    For more information, see [Configure Email Notifications](installing.html#email_settings).   
 * All destination email addresses now receive validation messages.
   Before v1.2.1, if the notification email address was the same as the account creating the target, the email address was verified automatically.
 
