changing release date [#159086835]
changing release date to 7/17

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -5,7 +5,7 @@ owner: PCF Event Alerts
 
 ##<a id="ver-1-2-1"></a> v1.2.1
 
-**Release Date: July X, 2018**
+**Release Date: July 17, 2018**
 
 ### <a id="features121"></a> Features
 
