fixes link to staging healthwatch[#159086835]

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -11,7 +11,7 @@ owner: PCF Event Alerts
 
 New features and changes in this release:
 
-* To view Healthwatch topics, you must have [PCF Healthwatch v.1.3] (https://docs-pcf-staging.cfapps.io/pcf-healthwatch/1-3/) installed.
+* To view Healthwatch topics, you must have [PCF Healthwatch v.1.3] (https://docs.pivotal.io/pcf-healthwatch) installed.
 * Dependence on notifications has been removed.
 * Email configuration is now an option. 
   <p class="note"><strong>Note</strong>: Specifying email configuration settings is required if you want notifications sent by email.</p>
