--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -47,11 +47,11 @@ The following table provides version and version-support information about PCF E
     </tr>
     <tr>
         <td>Compatible Ops Manager version(s)</td>
-        <td>v2.1.x, v2.2.x</td>
+        <td>v2.1.x and v2.2.x</td>
     </tr>
     <tr>
         <td>Compatible Pivotal Application Service (PAS) version(s)</td>
-        <td>v2.1.x, v2.2.x</td>
+        <td>v2.1.x and v2.2.x</td>
     </tr>
     <tr>
         <td>Compatible Pivotal Cloud Foundry Healthwatch version(s)</td>
