updates master for v1.3.x[#159086835]

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -3,11 +3,11 @@ title: Release Notes for PCF Event Alerts
 owner: PCF Event Alerts
 ---
 
-##<a id="ver-1-2-1"></a> v1.2.1
+##<a id="ver-1-2-1"></a> v1.3.x
 
-**Release Date: July 17, 2018**
+**Release Date: MMM XX, 2018**
 
-### <a id="features121"></a> Features
+### <a id="features130"></a> Features
 
 New features and changes in this release:
 
