--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -39,11 +39,11 @@ The following table provides version and version-support information about PCF E
     <th>Details</th>
     <tr>
         <td>Tile version</td>
-        <td>v1.2.1</td>
+        <td>v1.3.x</td>
     </tr>
     <tr>
         <td>Release date</td>
-        <td>July 17, 2018</td>
+        <td>MMM XX, 2018</td>
     </tr>
     <tr>
         <td>Compatible Ops Manager version(s)</td>
