--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -14,9 +14,10 @@ These are release notes for PCF Event Alerts.
 This release fixes the following issue:
 
 * Adds support for external Azure MySQL databases and other cases where usernames contain the '@' symbol.
-* Flyway Command-line now v5.1.4
-* Golang now v1.10.3
-* Product stemcell now v3541
+* Maintenance update of the following product dependencies
+    * Flyway Command-line now v.5.1.4
+    * Golang now v1.10.3
+    * Product stemcell now v3541
 
 ### <a id="known115"></a> Known Issues
 
