--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -9,9 +9,9 @@ These are release notes for PCF Event Alerts.
 
 **Release Date:** August 7, 2018
 
-### <a id="fixes115"></a> Fixed Issues
+### <a id="fixes115"></a> Features
 
-This release fixes the following issue:
+New features and changes in this release:
 
 * Adds support for external Azure MySQL databases and other cases where usernames contain the '@' symbol.
 * Maintenance update of the following product dependencies
@@ -35,7 +35,7 @@ This release fixes the following issue:
 
 ### <a id="known115"></a> Known Issues
 
-There are no known issues for this release.
+* **[Bug Identified]** When using an external Azure MySQL database or other databases where usernames contain the '@' symbol, authenticating will not work. This is fixed in PCF Event Alerts 1.1.6.
 
 ##<a id="ver-1-1-4"></a> v1.1.4
 
@@ -49,7 +49,7 @@ This release fixes the following issue:
 
 ### <a id="known114"></a> Known Issues
 
-There are no known issues for this release.
+* **[Bug Identified]** When using an external Azure MySQL database or other databases where usernames contain the '@' symbol, authenticating will not work. This is fixed in PCF Event Alerts 1.1.6.
 
 ##<a id="ver-1-1-3"></a> v1.1.3
 
@@ -64,8 +64,8 @@ New features and changes in this release:
 
 ### <a id="known113"></a> Known Issues
 
-Some users are unable to install PCF Event Alerts when the Notifications client requires HTTPS.
-This issue is fixed in v1.1.4.
+* **[Bug Identified]** Some users are unable to install PCF Event Alerts when the Notifications client requires HTTPS. This issue is fixed in v1.1.4.
+* **[Bug Identified]** When using an external Azure MySQL database or other databases where usernames contain the '@' symbol, authenticating will not work. This is fixed in PCF Event Alerts 1.1.6.
 
 ##<a id="ver"></a> v1.1.2
 
@@ -79,5 +79,5 @@ Features included in this release:
 
 ### <a id="known"></a> Known Issues
 
-There are no known issues for this release.
+* **[Bug Identified]** When using an external Azure MySQL database or other databases where usernames contain the '@' symbol, authenticating will not work. This is fixed in PCF Event Alerts 1.1.6.
 
