Bringing feature branch to parity with 1.2 [#159665533]

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -40,7 +40,7 @@ New features and changes in this release:
 
 ### <a id="known121"></a> Known Issues
 
-* **[Bug Identified]** When using an external Azure MySQL database or other databases where usernames contain the '@' symbol, authenticating will not work. This is fixed in PCF Event Alerts 1.2.2.
+* There are no known issues for this release.
 
 ## <a id="view"></a> View Release Notes for Another Version
 
