--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -14,6 +14,13 @@ You must have the following in order to install PCF Event Alerts:
 + MySQL for PCF v2.0 or later, or external MySQL credentials
 + If you want notifications sent to Slack channels, a Slack account
 + If you want notifications sent to email addresses, **Email Configuration** must be enabled and configured on the Event Alerts tile
++ Download Xenial stemcell from Pivotal Network.
+  + To download the Xenial stemcell, see [Stemcells for PCF (Ubuntu Xenial)](https://network.pivotal.io/products/stemcells-ubuntu-xenial/#/releases/172283).
+  + Import the stemcell into your Ops Manager Stemcell Library.
++ Update any BOSH add-ons being used with your tile.
+  + To update your File Integrity Monitoring Add-on, see [Updating FIM Add-on for PCF to Run with Xenial Stemcells](https://docs-pcf-staging.cfapps.io/addon-fim/updating-for-xenial.html)
+  + To update your ClamAV Add-on, see [Updating ClamAV Add-on for PCF to Run with Xenial Stemcells](https://docs.pivotal.io/addon-antivirus/1-4/updating-for-xenial.html)
+  + To update your IPsec Add-on, see [Updating IPsec Add-on for PCF to Run with Xenial Stemcells](https://docs-pcf-staging.cfapps.io/addon-ipsec/1-9/updating-for-xenial.html)
 
 ##<a id='install'></a> Download and Install the PCF Event Alerts Tile
 
