--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -14,13 +14,12 @@ You must have the following in order to install PCF Event Alerts:
 + MySQL for PCF v2.0 or later, or external MySQL credentials
 + If you want notifications sent to Slack channels, a Slack account
 + If you want notifications sent to email addresses, **Email Configuration** must be enabled and configured on the Event Alerts tile
-+ Download Xenial stemcell from Pivotal Network.
-  + To download the Xenial stemcell, see [Stemcells for PCF (Ubuntu Xenial)](https://network.pivotal.io/products/stemcells-ubuntu-xenial/#/releases/172283).
-  + Import the stemcell into your Ops Manager Stemcell Library.
-+ Update any BOSH add-ons being used with your tile.
-  + To update your File Integrity Monitoring Add-on, see [Updating FIM Add-on for PCF to Run with Xenial Stemcells](https://docs-pcf-staging.cfapps.io/addon-fim/updating-for-xenial.html)
-  + To update your ClamAV Add-on, see [Updating ClamAV Add-on for PCF to Run with Xenial Stemcells](https://docs.pivotal.io/addon-antivirus/1-4/updating-for-xenial.html)
-  + To update your IPsec Add-on, see [Updating IPsec Add-on for PCF to Run with Xenial Stemcells](https://docs-pcf-staging.cfapps.io/addon-ipsec/1-9/updating-for-xenial.html)
++ A Xenial stemcell supported for your IaaS
+  + To download a Xenial stemcell from Pivotal Network, see [Stemcells for PCF (Ubuntu Xenial)](https://network.pivotal.io/products/stemcells-ubuntu-xenial/).
++ Updated any BOSH add-ons being used in your PCF deployment to support Xenial stemcells
+  + To update the File Integrity Monitoring for PCF Add-on, see [Updating FIM Add-on for PCF to Run with Xenial Stemcells](https://docs.pivotal.io/addon-fim/updating-for-xenial.html).
+  + To update the ClamAV for PCF Add-on, see [Updating ClamAV Add-on for PCF to Run with Xenial Stemcells](https://docs.pivotal.io/addon-antivirus/updating-for-xenial.html).
+  + To update the IPsec for PCF Add-on, see [Updating IPsec Add-on for PCF to Run with Xenial Stemcells](https://docs-pcf-staging.cfapps.io/addon-ipsec/updating-for-xenial.html).
 
 ##<a id='install'></a> Download and Install the PCF Event Alerts Tile
 
@@ -196,6 +195,7 @@ a message similar to the following appears (the version numbers shown may be dif
       1. Navigate to [Pivotal Network](https://network.pivotal.io/) and click **Stemcells**.
       1. Download the appropriate stemcell version targeted for your IaaS.
       1. Return to the **Stemcell** tab and click **Import Stemcell** to import the downloaded stemcell TGZ file.
+      <p class="note"><strong>Note: </strong> PCF Event Alerts v1.2.2 and later require a Xenial stemcell.</p>
 
 1. Click **Save**.
 
