--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -14,10 +14,10 @@ You must have the following in order to install PCF Event Alerts:
 + MySQL for PCF v2.0 or later, or external MySQL credentials
 + If you want notifications sent to Slack channels, a Slack account
 + If you want notifications sent to email addresses, **Email Configuration** must be enabled and configured on the Event Alerts tile
-+ Updated any BOSH add-ons being used in your PCF deployment to support Xenial stemcells
-  + To update the File Integrity Monitoring for PCF Add-on, see [Updating FIM Add-on for PCF to Run with Xenial Stemcells](https://docs.pivotal.io/addon-fim/updating-for-xenial.html).
-  + To update the ClamAV for PCF Add-on, see [Updating ClamAV Add-on for PCF to Run with Xenial Stemcells](https://docs.pivotal.io/addon-antivirus/updating-for-xenial.html).
-  + To update the IPsec for PCF Add-on, see [Updating IPsec Add-on for PCF to Run with Xenial Stemcells](https://docs.pivotal.io/addon-ipsec/updating-for-xenial.html).
++ Updated and properly configured any BOSH add-ons used in your PCF deployment to support Xenial stemcells. The following add-on versions support the Xenial stemcell:
+  + ClamAV Add-on for PCF v1.2.22 or later. For information on how to update this add-on, see [Updating ClamAV Add-on for PCF to Run with Xenial Stemcells](https://docs.pivotal.io/addon-antivirus/updating-for-xenial.html).
+  + File Integrity Monitoring Add-on for PCF v1.4.28 or later. For information on how to update this add-on, see [Updating FIM Add-on for PCF to Run with Xenial Stemcells](https://docs.pivotal.io/addon-fim/updating-for-xenial.html).
+  + IPsec Add-on for PCF Add-on v1.4.28 or later. For information on how to update this add-on, see [Updating IPsec Add-on for PCF to Run with Xenial Stemcells](https://docs.pivotal.io/addon-ipsec/updating-for-xenial.html).
 
 ##<a id='install'></a> Download and Install the PCF Event Alerts Tile
 
