add date and minor wording change

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -5,7 +5,7 @@ owner: PCF Event Alerts
 
 ##<a id="ver-1-2-3"></a> v1.2.3
 
-**Release Date: September XX, 2018**
+**Release Date: September 5, 2018**
 
 ### <a id="features123"></a> Features
 
@@ -46,7 +46,7 @@ New features and changes in this release:
 
 ### <a id="known121"></a> Known Issues
 
-* **[Bug Identified]** Users of Event Alerts 1.2.1 are required to use escape characters in configuration passwords. This is no longer required in Event Alerts 1.2.3 and future releases.  
+* **[Bug Identified]** Users of Event Alerts v1.2.1 are required to use escape characters in configuration passwords. This is no longer required in Event Alerts v1.2.3 and later releases.  
 
 ## <a id="view"></a> View Release Notes for Another Version
 
