--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -11,21 +11,35 @@ owner: PCF Event Alerts
 
 New features and changes in this release:
 
-* **[Bug Fix]** Adds support for external Azure MySQL databases and other cases where usernames contain the '@' symbol. 
-* SMTP verification is no longer required. To skip SMTP verification, simply bypass that step in the set up process. 
-* Escape characters are no longer required to be used in configuration passwords. 
+* SMTP verification is no longer required.
+  To skip SMTP verification, bypass that step in the setup process. 
+
+* Escape characters are no longer required in configuration passwords. 
+
 * Maintenance update of the following product dependencies:
     * Flyway Command-line is now v.5.1.4
     * Golang is now v1.10.3
     * Product stemcell is now Ubuntu Xenial v97.x
-    	* Before using PCF Event Alerts v1.2.3, you must update any BOSH add-ons to support Xenial stemcells.
-    	For more information, see [Prerequisites](./installing.html#prereqs).
+
+* Before using PCF Event Alerts v1.2.3, you must update any BOSH add-ons to support Xenial stemcells.
+    For more information, see [Prerequisites](./installing.html#prereqs).
 <p class="note breaking"><strong>Breaking Change: </strong>PCF Event Alerts v1.2.3 and later require a Xenial stemcell.
 You must manually download and import a new stemcell into the Ops Manager Stemcell Library before deploying PCF Event Alerts.
-Any automation you have set up to update your PCF Event Alerts deployments using Trusty stemcells may break.</p>
+Any automation you have set up to update your PCF Event Alerts deployments using Trusty stemcells might break.</p>
+
+### <a id="fixed123"></a> Fixed Issues
+
+This release fixes the following issue:
+
+* External Azure MySQL databases and other cases where usernames contain the '@' symbol are now supported.
 
 ### <a id="known123"></a> Known Issues
-* **[Known Issue]** When saving the MySQL settings page with Azure style usernames (for example, 'userId@serverName), you may see an error message due to non-support of the `@` character. You can ignore this message and successfully authenticate.
+
+This release has the following issue:
+
+* When saving the MySQL settings page with Azure style usernames (for example, 'userId@serverName),
+  you might see an error message due to non-support of the `@` character.
+  You can ignore this message and successfully authenticate.
 
 ##<a id="ver-1-2-1"></a> v1.2.1
 
@@ -36,18 +50,26 @@ Any automation you have set up to update your PCF Event Alerts deployments using
 New features and changes in this release:
 
 * To view Healthwatch topics, you must have [PCF Healthwatch v.1.3] (https://docs.pivotal.io/pcf-healthwatch) installed.
+
 * Dependence on notifications has been removed.
+
 * Email configuration is now an option. 
   <p class="note"><strong>Note</strong>: Specifying email configuration settings is required if you want notifications sent by email.</p>
     For more information, see [Configure Email Notifications](installing.html#email_settings).   
+
 * All destination email addresses now receive validation messages.
   Before v1.2.1, if the notification email address was the same as the account creating the target, the email address was verified automatically.
 
 ### <a id="known121"></a> Known Issues
 
-* **[Bug Identified]** Users of Event Alerts v1.2.1 are required to use escape characters in configuration passwords. This is no longer required in Event Alerts v1.2.3 and later releases. 
-* **[Bug Identified]** When using an external Azure MySQL database or other databases 
-where usernames contain the '@' symbol, authentication will not work. This issue is fixed in PCF Event Alerts 1.1.6.
+This release has the following issues:
+
+* Users of Event Alerts v1.2.1 are required to use escape characters in configuration passwords.
+  This is no longer required in Event Alerts v1.2.3 and later releases. 
+
+* When using an external Azure MySQL database or other databases 
+  where usernames contain the `@` symbol, authentication does not work.
+  This issue is fixed in PCF Event Alerts v1.1.6.
 
 ## <a id="view"></a> View Release Notes for Another Version
 
