standardizing on backtick[#160326726]

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -31,13 +31,13 @@ Any automation you have set up to update your PCF Event Alerts deployments using
 
 This release fixes the following issue:
 
-* External Azure MySQL databases and other cases where usernames contain the '@' symbol are now supported.
+* External Azure MySQL databases and other cases where usernames contain the `@` symbol are now supported.
 
 ### <a id="known123"></a> Known Issues
 
 This release has the following issue:
 
-* When saving the MySQL settings page with Azure style usernames (for example, 'userId@serverName),
+* When saving the MySQL settings page with Azure style usernames (for example, `userId@serverName`),
   you might see an error message due to non-support of the `@` character.
   You can ignore this message and successfully authenticate.
 
