[#160572776] pending change flow

--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -197,7 +197,12 @@ a message similar to the following appears (the version numbers shown may be dif
 
 1. Click **Save**.
 
-1. Return to the Ops Manager Installation Dashboard and click **Apply Changes** to install the PCF Event Alerts tile.
+1. Return to the Ops Manager Installation Dashboard.
+
+1. If you are using Ops Manager v2.3 or later, click **Review Pending Changes**. 
+For more information about this Ops Manager page, see [Reviewing Pending Product Changes](https://docs.pivotal.io/pivotalcf/customizing/review-pending-changes.html).
+
+1. Click **Apply Changes** to install the PCF Event Alerts tile.
 
 ##<a id="plugin"></a> Install the PCF Event Alerts Plugin
 
