--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -13,7 +13,7 @@ You must have the following in order to install PCF Event Alerts:
 + PAS v2.1.x or later
 + MySQL for PCF v2.0 or later, or external MySQL credentials
 + If you want notifications sent to Slack channels, a Slack account
-+ If you want notifications sent to email addresses, **Email Configuration** must be enabled and configured on the Event Alerts tile
++ If you want notifications sent to email addresses, **Email Configuration** must be enabled and configured on the PCF Event Alerts tile
 + Updated and properly configured any BOSH add-ons used in your PCF deployment to support Xenial stemcells. The following add-on versions support the Xenial stemcell:
   + ClamAV Add-on for PCF v1.2.22 and later. For information on how to update this add-on, see [Updating ClamAV Add-on for PCF to Run with Xenial Stemcells](https://docs.pivotal.io/addon-antivirus/updating-for-xenial.html).
   + File Integrity Monitoring Add-on for PCF v1.4.28 and later. For information on how to update this add-on, see [Updating FIM Add-on for PCF to Run with Xenial Stemcells](https://docs.pivotal.io/addon-fim/updating-for-xenial.html).
@@ -71,7 +71,7 @@ Follow the steps below to choose an Availability Zone (AZ) to run PCF Event Aler
 
 ### <a id="event-alerts-alerting-config"></a> (Optional) Configure Scaling Settings
 
-You can scale PCF event alerts by adding additional instances of the app. 
+You can scale PCF Event Alerts by adding additional instances of the app. 
 Follow the steps below to optionally configure scaling settings.
 
 1. Click the **Scale** tab.
@@ -184,11 +184,13 @@ Follow the steps below to configure settings for Event Alerts email notification
 
 ### <a id="stemcell"></a> Verify Stemcell Version
 
+To verify that you have the correct stemcell version for the Event Alerts tile, do the following:
+
 1. Click the **Stemcell** tab.
 
 1. Verify the settings. If PCF Event Alerts cannot detect a stemcell TGZ file, 
-a message similar to the following appears (the version numbers shown may be different):
-    ![Stemcell Section](images/stemcell-library.png)
+a message similar to the following appears:
+    ![Stemcell Section](images/stemcell-library-xenial.png)
     If you need to upload a stemcell, do the following:
       1. Navigate to [Pivotal Network](https://network.pivotal.io/) and click **Stemcells**.
       1. Download the appropriate stemcell version targeted for your IaaS.
