--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -9,7 +9,7 @@ owner: PCF Event Alerts
 ### <a id="features123"></a> Features
 
 * Maintenance update for the following product dependencies:
-    * `cflinuxfs2` is now `cfslinuxfs3`. `cflinuxfs2` still works when PCF Event Alerts is installed on a PCF 2.2 environment.
+    * PCF Event Alerts uses `cflinuxfs3` as the default stack when available. `cflinuxfs2` is used when PCF Event Alerts is installed on an environment that does not have `cflinuxfs3`, for example, a PCF 2.2 environment.
 
 ### <a id="fixed123"></a> Fixed Issues
 
